--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -59,7 +59,7 @@ services:
       dockerfile: ./docker/buildkite/Dockerfile
     command: >
       bash -c "./gradlew --no-daemon test
-      if [ ! -z $(git status --porcelain) ]; then 
+      if [ ! -z $$(git status --porcelain) ]; then 
         echo 'Some files were improperly formatted. Please run build locally and check in all changes.'
         git status;
         exit 1;
