Move TestWorkflowRule to a dedicated module
Decouple generic Temporal testing infrastructure and JUnit4-specific
TestWorkflowRule. Move TestWorkflowRule to a dedicated
temporal-testing-junit4 module.

This opens up an opportunity for alternative test framework
integrations, e.g. JUnit 5, Spock, Spek, etc.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name='temporalio'
 include 'temporal-serviceclient'
 include 'temporal-sdk'
 include 'temporal-testing'
+include 'temporal-testing-junit4'
