--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -51,7 +51,7 @@ dependencies {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
 
-    testImplementation project(':temporal-testing')
+    testImplementation project(':temporal-testing-junit4')
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
