--- a/temporal-testing-junit4/build.gradle
+++ b/temporal-testing-junit4/build.gradle
@@ -23,9 +23,9 @@ if (hasProperty('signing.keyId')) {
 
 group = 'io.temporal'
 version = getVersionName()
-archivesBaseName = "temporal-testing"
+archivesBaseName = "temporal-testing-junit4"
 
-description = '''Temporal Workflow Java SDK testing'''
+description = '''Temporal Workflow Java SDK testing, JUnit 4.x integration'''
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
@@ -38,10 +38,9 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.5.1')
 
-    api project(':temporal-sdk')
+    api project(':temporal-testing')
 
-    implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
-    implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.3'
+    api group: 'junit', name: 'junit', version: '4.13.1'
 }
 
 license {
@@ -105,10 +104,10 @@ publishing {
                 }
             }
             pom {
-                name = 'Temporal Java SDK testing'
+                name = 'Temporal Java SDK testing for JUnit 4'
                 packaging = 'jar'
                 // optionally artifactId can be defined here
-                description = 'Temporal Workflow Java SDK testing'
+                description = 'Temporal Workflow Java SDK testing, JUnit 4.x integration'
                 url = 'https://github.com/temporalio/temporal-java-sdk'
 
                 scm {
