--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'temporal-testing'
 include 'temporal-testing-junit4'
 include 'temporal-testing-junit5'
 include 'temporal-opentracing'
+include 'temporal-kotlin'
