--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ include 'temporal-serviceclient'
 include 'temporal-sdk'
 include 'temporal-testing'
 include 'temporal-testing-junit4'
+include 'temporal-testing-junit5'
