--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -77,21 +77,19 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.5.1')
 
-    api 'io.grpc:grpc-protobuf:1.36.0'
-    api 'io.grpc:grpc-stub:1.36.0'
-    api 'io.grpc:grpc-core:1.36.0'
-    api group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.15.2'
-    api group: 'com.uber.m3', name: 'tally-core', version: '0.7.0'
+    api 'io.grpc:grpc-protobuf:1.35.0'
+    api 'io.grpc:grpc-stub:1.35.0'
+    api 'io.grpc:grpc-core:1.35.0'
+    api group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.14.0'
+    api group: 'com.uber.m3', name: 'tally-core', version: '0.6.1'
     api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-    api 'io.grpc:grpc-netty-shaded:1.36.0'
+    api 'io.grpc:grpc-netty-shaded:1.35.0'
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
-    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testImplementation group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.8.0'
-    testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: '2.2'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
 
