--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'temporal-sdk'
 include 'temporal-testing'
 include 'temporal-testing-junit4'
 include 'temporal-testing-junit5'
+include 'temporal-opentracing'
