--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -2,8 +2,8 @@
 plugins {
     id 'java-library'
     id 'net.ltgt.errorprone' version '2.0.1'
-    id 'net.minecrell.licenser' version '0.4.1'
-    id 'com.palantir.git-version' version '0.12.3'
+    id 'org.cadixdev.licenser' version '0.5.1'
+    id 'com.palantir.git-version' version '0.12.2'
     id 'maven-publish'
     id 'signing'
     id 'de.marcphilipp.nexus-publish' version '0.4.0'
