--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "temporal-serviceclient/src/main/proto"]
 	path = temporal-serviceclient/src/main/proto
-	url = git@github.com:temporalio/api.git
+	url = https://github.com/temporalio/api.git
