--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.5'
+
+    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
 }
 
 license {
