--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -1,6 +1,11 @@
 description = '''Temporal Workflow Java SDK testing'''
 
+plugins {
+    id 'application'
+}
+
 dependencies {
+    api group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
     api project(':temporal-sdk')
 
     implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
@@ -8,4 +13,18 @@ dependencies {
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+}
+
+task testServiceServer(type: CreateStartScripts) {
+    mainClassName = 'io.temporal.internal.testservice.TestServiceServer'
+    applicationName = 'test-service-server'
+    outputDir = new File(project.buildDir, 'tmp')
+    classpath = startScripts.classpath
+    dependsOn 'sourceJar'
+}
+
+// Run: ./gradlew installDist :temporal-testing:testServiceServer
+applicationDistribution.into('bin') {
+    from(testServiceServer)
+    fileMode = 0755
 }
