Moves groupId and version config to top level build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ ext.getClientVersionName = { ->
 
 // Logs list of failed tests after build is done.
 subprojects {
+    group = 'io.temporal'
+    version = getVersionName()
+
     repositories {
         maven {
             url 'https://plugins.gradle.org/m2/'
