--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.github.sherter.google-java-format' version '0.9' apply false
+    id 'net.ltgt.errorprone' version '2.0.1' apply false
 }
 
 // v0.20.0-2-g000a42a -> 0.20.0-2-g000a42a
@@ -45,6 +46,8 @@ subprojects {
         mavenCentral()
     }
 
+    apply plugin: 'java-library'
+
     apply plugin: 'com.github.sherter.google-java-format'
 
     googleJavaFormat {
@@ -52,6 +55,12 @@ subprojects {
         include '**/*.java'
         exclude '**/generated/*'
         exclude '**/.idea/**'
+    }
+
+    apply plugin: 'net.ltgt.errorprone'
+    dependencies {
+        errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
+        errorprone('com.google.errorprone:error_prone_core:2.7.1')
     }
 
     // add a collection to track failedTests
