--- a/build.gradle
+++ b/build.gradle
@@ -102,8 +102,15 @@ subprojects {
     // add a collection to track failedTests
     ext.failedTests = []
 
-    // add a testlistener to all tasks of type Test
-    tasks.withType(Test) {
+    test {
+        testLogging {
+            events 'passed', 'skipped', 'failed'
+            exceptionFormat 'full'
+            // Uncomment the following line if you want to see test logs in gradlew run.
+            showStandardStreams true
+        }
+        forkEvery = 1
+        maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
         afterTest { TestDescriptor descriptor, TestResult result ->
             if (result.resultType == org.gradle.api.tasks.testing.TestResult.ResultType.FAILURE) {
                 failedTests << ["${descriptor.className}::${descriptor.name}"]
