--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
+// Run 'gradle checkUpdates' to find out which dependencies have newer versions
 plugins {
     id 'com.github.sherter.google-java-format' version '0.9' apply false
     id 'net.ltgt.errorprone' version '2.0.1' apply false
     id 'org.cadixdev.licenser' version '0.6.0'
+    id 'name.remal.check-updates' version '1.3.1' apply false
 }
 
 // v0.20.0-2-g000a42a -> 0.20.0-2-g000a42a
@@ -54,6 +56,9 @@ subprojects {
         withJavadocJar()
         withSourcesJar()
     }
+
+    apply plugin: "name.remal.check-updates"
+
     apply plugin: 'com.github.sherter.google-java-format'
 
     googleJavaFormat {
