--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,6 +18,7 @@ steps:
     timeout_in_minutes: 60
     plugins:
       - docker-compose#v3.0.0:
-          run: fossa-scan
+          run: fossa
           config: docker/buildkite/docker-compose.yaml
+
   - wait
