set fossa branch

--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -70,6 +70,7 @@ services:
       dockerfile: ./docker/buildkite/Dockerfile
     command: /bin/sh
     environment:
+      - BUILDKITE_BRANCH
       - FOSSA_API_KEY
     volumes:
       - "../../:/temporal-java-client"
