--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -14,7 +14,7 @@ steps:
     agents:
       queue: "default"
       docker: "*"
-    command: "fossa init --include-all --no-ansi; fossa analyze --no-ansi; fossa test --timeout 1800 --no-ansi"
+    command: "fossa init --include-all --no-ansi; fossa analyze --no-ansi -b $${BUILDKITE_BRANCH:-$$(git branch --show-current)}; fossa test --timeout 1800 --no-ansi"
     timeout_in_minutes: 60
     plugins:
       - docker-compose#v3.0.0:
