Add Fossa scans (#488)

--- a/docker/buildkite/docker-compose.yaml
+++ b/docker/buildkite/docker-compose.yaml
@@ -63,3 +63,15 @@ services:
       - "USE_DOCKER_SERVICE=false"
     volumes:
       - "../../:/temporal-java-client"
+
+  fossa:
+    build:
+      context: ../../
+      dockerfile: ./docker/buildkite/Dockerfile
+    command: /bin/sh
+    environment:
+      - BUILDKITE_BRANCH
+      - FOSSA_API_KEY
+    volumes:
+      - "../../:/temporal-java-client"
+
