--- a/build.gradle
+++ b/build.gradle
@@ -8,42 +8,10 @@ plugins {
     id 'de.marcphilipp.nexus-publish' version '0.4.0' apply false
 }
 
-// v0.20.0-2-g000a42a -> 0.20.0-2-g000a42a
-ext.getTag = { ->
-    def stdout = new ByteArrayOutputStream()
-    exec {
-        commandLine 'git', 'describe', '--tags'
-        standardOutput = stdout
-    }
-    return stdout.toString().trim().substring(1)
-}
-
-// 0.20.0-2-g000a42a -> 0.20.0-SNAPSHOT
-// 0.20.0 -> 0.20.0
-// Used to name jar files
-ext.getVersionName = { ->
-    def split = getTag().split('-')
-    if (split.size() > 1) {
-        return split[0] + '-SNAPSHOT'
-    }
-    return split[0]
-}
-
-// 0.20.0-SNAPSHOT -> 0.20.0
-// 0.20.0 -> 0.20.0
-// Stored int version.properties which is loaded
-// and used as a value of temporal-client-version gRPC header.
-ext.getClientVersionName = { ->
-    def split = getVersionName().split('-')
-    return split[0]
-}
-
+apply from: "$rootDir/gradle/versioning.gradle"
 
 // Logs list of failed tests after build is done.
 subprojects {
-    apply plugin: "com.palantir.git-version"
-    group = 'io.temporal'
-    version = getVersionName()
 
     repositories {
         mavenCentral()
