Re-enable JUnit5-based tests

--- a/temporal-testing-junit5/build.gradle
+++ b/temporal-testing-junit5/build.gradle
@@ -9,3 +9,7 @@ dependencies {
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
 }
+
+test {
+    useJUnitPlatform()
+}
