--- a/temporal-testing-junit4/build.gradle
+++ b/temporal-testing-junit4/build.gradle
@@ -4,5 +4,7 @@ dependencies {
     api project(':temporal-testing')
 
     api group: 'junit', name: 'junit', version: '4.13.2'
+
+    testRuntimeOnly group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
 }
 
