--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -5,7 +5,6 @@ plugins {
 description = '''Temporal Workflow Java SDK testing'''
 
 dependencies {
-    api group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
     api project(':temporal-sdk')
 
     implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
@@ -13,6 +12,7 @@ dependencies {
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testRuntimeOnly group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
 }
 
 task testServiceServer(type: CreateStartScripts) {
