Post-release cleanup and versions upgrade

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ plugins {
     id 'de.marcphilipp.nexus-publish' version '0.4.0' apply false
 }
 
+ext {
+    logbackVersion = '1.2.6'
+}
+
 apply from: "$rootDir/gradle/versioning.gradle"
 apply from: "$rootDir/gradle/java.gradle"
 apply from: "$rootDir/gradle/licensing.gradle"
