--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -1,9 +1,9 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-//    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
+//    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
 //    id 'org.jetbrains.kotlin.jvm' version '1.5.30'
 
-    id 'org.jlleitschuh.gradle.ktlint' version '10.1.0'
+    id 'org.jlleitschuh.gradle.ktlint' version '10.2.0'
 }
 
 description = '''Temporal Workflow Java SDK Kotlin'''
@@ -29,6 +29,6 @@ dependencies {
     testImplementation project(':temporal-testing')
     testImplementation project(':temporal-testing-junit4')
 
-    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.5'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
