--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
-    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.5'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
