Add some Kotlin extensions for Java SDK methods
* metadata helpers: workflowName, workflowSignalName, workflowQueryType,
  activityName
* inline/reified extensions for existing methods
* DSL-y wrappers for builders

--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -10,12 +10,14 @@ description = '''Temporal Workflow Java SDK Kotlin'''
 
 compileKotlin {
     kotlinOptions {
+        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
         jvmTarget = JavaVersion.VERSION_1_8
     }
 }
 
 compileTestKotlin {
     kotlinOptions {
+        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
         jvmTarget = JavaVersion.VERSION_1_8
     }
 }
