--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -12,6 +12,13 @@ dependencies {
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
+    // compileOnly and testImplementation because this dependency is needed only to work with json format of history
+    // which shouldn't be needed for any production usage of temporal-sdk.
+    // It's useful only for unit tests and debugging.
+    // For these use-cases Temporal users can add this dep in the classpath temporary or permanently themselves.
+    compileOnly group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
+    testImplementation group: 'com.jayway.jsonpath', name: 'json-path', version: '2.6.0'
+
     testImplementation project(':temporal-testing-junit4')
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
