--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
+
+    testImplementation project(':temporal-testing')
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
@@ -99,7 +101,7 @@ classes {
 tasks.sourcesJar.from(file("$buildDir/generated/main/java"))
 
 task registerNamespace(type: JavaExec) {
-    main = 'io.temporal.serviceclient.RegisterTestNamespace'
+    main = 'io.temporal.internal.docker.RegisterTestNamespace'
     classpath = sourceSets.test.runtimeClasspath
 }
 
