--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -7,22 +7,24 @@ apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
 description = '''Temporal Workflow Java SDK'''
 
 dependencies {
-    api 'io.grpc:grpc-protobuf:1.40.1'
-    api 'io.grpc:grpc-stub:1.40.1'
-    api 'io.grpc:grpc-core:1.40.1'
-    api 'io.grpc:grpc-netty-shaded:1.40.1'
-    api 'io.grpc:grpc-services:1.40.1'
-    api group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.18.0'
-    api group: 'com.uber.m3', name: 'tally-core', version: '0.6.1'
+    api "io.grpc:grpc-api:$grpcVersion" //Classes like io.grpc.Metadata are used as a part of our API
+    api "io.grpc:grpc-stub:$grpcVersion" //Part of WorkflowServiceStubs API
+    api "com.google.protobuf:protobuf-java-util:3.18.0" //proto request and response objects are a part of this module's API
+    api "com.uber.m3:tally-core:0.11.1"
+
+    implementation "io.grpc:grpc-core:$grpcVersion"
+    implementation "io.grpc:grpc-services:$grpcVersion"
+    implementation "io.grpc:grpc-netty-shaded:$grpcVersion"
+
     api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
 
     testImplementation project(':temporal-testing')
-    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation "ch.qos.logback:logback-classic:${logbackVersion}"
+    testImplementation "org.mockito:mockito-core:3.12.4"
+    testImplementation "junit:junit:4.13.2"
 }
 
 task initSubmodules(type: Exec) {
@@ -44,12 +46,14 @@ jar {
 }
 
 protobuf {
+    // version/variables substitution is not supported in protobuf section.
+    // protoc and protoc-gen-grpc-java versions should be aligned with protobuf and grpc versions of the project
     protoc {
         artifact = 'com.google.protobuf:protoc:3.18.0'
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.40.1'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.41.0'
         }
     }
     generateProtoTasks {
