--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -7,7 +7,8 @@ description = '''Temporal Workflow Java SDK testing'''
 dependencies {
     api project(':temporal-sdk')
 
-    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
+    implementation "io.grpc:grpc-core:$grpcVersion"
+    implementation "com.google.guava:guava:$guavaVersion"
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.5'
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
