--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ ext {
     logbackVersion = '1.2.6'
     grpcVersion = '1.41.0'
     guavaVersion = '31.0.1-jre'
+    jsonPathVersion = '2.6.0'
 }
 
 apply from: "$rootDir/gradle/versioning.gradle"
