--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation "io.grpc:grpc-core:$grpcVersion"
     implementation "com.google.guava:guava:$guavaVersion"
     implementation group: 'com.cronutils', name: 'cron-utils', version: '9.1.5'
+    implementation "com.jayway.jsonpath:json-path:$jsonPathVersion"
 
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
