--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ plugins {
 ext {
     logbackVersion = '1.2.6'
     grpcVersion = '1.41.0'
-    guavaVersion = '31.0.1-jre'
+    guavaVersion = '[10.0,)!!31.0.1-jre'
     jsonPathVersion = '2.6.0'
 }
 
