--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testImplementation project(':temporal-testing-junit4')
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.0.0'
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
 }
 
 task registerNamespace(type: JavaExec) {
