--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 
     testImplementation project(':temporal-testing')
     testImplementation "ch.qos.logback:logback-classic:${logbackVersion}"
-    testImplementation "org.mockito:mockito-core:3.12.4"
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
     testImplementation "junit:junit:4.13.2"
 }
 
