--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -25,7 +25,7 @@ compileTestKotlin {
 dependencies {
     implementation(platform("com.fasterxml.jackson:jackson-bom:$jacksonVersion"))
 
-    implementation project(':temporal-sdk')
+    api project(':temporal-sdk')
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
 
