Report WORKFLOW_TASK_FAILED_CAUSE_NON_DETERMINISTIC_ERROR status Issue #625

--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -22,9 +22,10 @@ dependencies {
     }
 
     testImplementation project(':temporal-testing')
-    testImplementation "ch.qos.logback:logback-classic:${logbackVersion}"
     testImplementation "org.mockito:mockito-core:${mockitoVersion}"
     testImplementation "junit:junit:4.13.2"
+
+    testRuntimeOnly "ch.qos.logback:logback-classic:${logbackVersion}"
 }
 
 task initSubmodules(type: Exec) {
