--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -35,9 +35,9 @@ dependencies {
     }
 
     testImplementation project(':temporal-testing')
-
-    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+
+    testRuntimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
 }
 
 task registerNamespace(type: JavaExec) {
