--- a/temporal-opentracing/build.gradle
+++ b/temporal-opentracing/build.gradle
@@ -17,8 +17,9 @@ dependencies {
 
     testImplementation project(":temporal-testing")
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
     testImplementation "org.mockito:mockito-core:${mockitoVersion}"
     testImplementation group: 'io.opentracing', name: 'opentracing-mock', version: "$opentracingVersion"
     testImplementation group: 'io.jaegertracing', name: 'jaeger-client', version: '1.6.0'
+
+    testRuntimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: "${logbackVersion}"
 }
