Support for PKCS12 keys in SimpleSslContextBuilder Issue #925

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name='temporalio'
+rootProject.name='temporal-java-sdk'
 include 'temporal-serviceclient'
 include 'temporal-sdk'
 include 'temporal-testing'
