Make GraalVM exe generation part of the build
The Gradle task `nativeImage` will generate a
build/graal/temporal-test-server executable and the task `docker` will
wrap the same into a Docker image.

--- a/temporal-testing/build.gradle
+++ b/temporal-testing/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'application'
+    id 'com.palantir.graal' version '0.10.0'
+    id 'com.palantir.docker' version '0.32.0'
 }
 
 description = '''Temporal Workflow Java SDK testing'''
@@ -51,6 +53,23 @@ task testServiceServer(type: CreateStartScripts) {
     outputDir = new File(project.buildDir, 'dist')
     classpath = startScripts.classpath
     dependsOn 'sourcesJar'
+}
+
+graal {
+  outputName "temporal-test-server"
+  mainClass application.mainClassName
+  javaVersion '17'
+  graalVersion '21.3.0'
+  option "--class-path=${buildDir}/dependencies/*"
+  option "--allow-incomplete-classpath"
+  option "--no-fallback"
+  option "--install-exit-handlers"
+  option "-H:+StaticExecutableWithDynamicLibC"
+}
+
+docker {
+  name "temporalio/temporal-test-server:${version}"
+  files tasks.nativeImage.outputs
 }
 
 // Run: ./gradlew installDist :temporal-testing:testServiceServer
