--- a/temporal-testing/src/main/resources/META-INF/native-image/io.temporal/temporal-testing/native-image.properties
+++ b/temporal-testing/src/main/resources/META-INF/native-image/io.temporal/temporal-testing/native-image.properties
@@ -19,8 +19,14 @@
 
 Args = --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder \
   --initialize-at-build-time=org.slf4j.LoggerFactory \
+  --initialize-at-run-time=io.grpc.netty.shaded.io.netty.channel.epoll \
+  --initialize-at-run-time=io.grpc.netty.shaded.io.netty.channel.unix \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.util.internal.logging.Log4JLogger \
   --initialize-at-run-time=io.grpc.netty.shaded.io.netty.internal.tcnative \
-  --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl
-
+  --initialize-at-run-time=io.grpc.netty.shaded.io.netty.handler.ssl \
+  -H:DynamicProxyConfigurationResources=${.}/proxy-config.json \
+  -H:JNIConfigurationResources=${.}/jni-config.json \
+  -H:ReflectionConfigurationResources=${.}/reflect-config.json \
+  -H:ResourceConfigurationResources=${.}/resource-config.json \
+  -H:SerializationConfigurationResources=${.}/serialization-config.json
 
